--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,224 @@
+body{
+  background-color: #000000;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    background-color: #212121;
+    color: white;
+    min-height: 40px;
+    font-size: 15px;
+    flex-direction: row-reverse;
+    flex-wrap: nowrap;
+    align-content: stretch;
+    justify-content: space-around;
+    align-items: center;
+    column-gap: 10px;
+    padding: 10px;
+    color: white;
+    background-color: #000000;
+    
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.hover-efect :hover{color:red;}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App3{
+  width: fit-content;
+  height:fit-content;
+  background-color: #212121;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.Find-movies{
+  position: absolute;
+width: 445px;
+height: 29px;
+left: 497px;
+top: 243px;
+
+font-family: 'Bitter';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 29px;
+
+color: #FFFFFF;
+}
+.center-max-size {
+  max-width: 1020px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.form1{
+  position: absolute;
+width: 859px;
+height: 62px;
+left: 230px;
+top: 307px;
+
+background: #FFFFFF;
+}
+
+.search {
+  border: 2px solid rgb(93, 91, 91);
+  outline: transparent;
+  background-color: transparent;
+  padding: 5px 10px;
+  border-radius: 25px;
+  color: white;
+
+}
+.search:hover{
+  background-color: white;
+  color:black;
+}
+
+.submit-search {
+  
+  background-color: transparent;
+  color:  white;
+  border: none;
+  cursor: pointer;
+  
+}
+.container {
+  background-color: #0F1014;
+  background-color: #000000;
+  min-width: fit-content;
+  /* padding-left: 50px;
+  padding-right: 50px; */
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  gap: 30px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container1 {
+  background-color: #0F1014;
+  background-color: #000000;
+  min-width: fit-content;
+  /* padding-left: 50px;
+  padding-right: 50px; */
+  padding-top: 80px;
+  padding-bottom: 80px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr  ;
+  gap: 80px;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-links{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  gap: 30px;
+  padding-left:2vw;
+  padding-right:2vw;
+  width:95vw;
+  link-style:none;
+  text-decoration: none;
+  color:white;
+  cursor:pointer
 }
+.links-individual-pphoto{
+  color: white;
+  text-decoration:none;
+
+}
+h5{
+  font-size: 1.25vw;
+}
+
+.movie {
+  position: relative;
+  cursor: pointer;
+  text-align: left;
+  font-size: 16px;
+}
+
+.movie img {
+  height: 355px;
+  max-width: 100%;
+  border-radius: 5px;
+}
+.movie img:hover {
+  transform: scale(1.1);  
+}
+
+.movie-infos {
+  padding: 15px 0;
+  
+}
+
+.movie-title {
+  margin: 0;
+  color:white;
+}
+
+.movie-voting {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  background-color: #0F1014;
+  border: 1px solid gray;
+  padding: 10px;
+  font-size: 12px;
+  border-radius: 25px;
+  display: none;
+}
+.titleAndIMdb{
+  font-size: 25px;
+}
+.movieSummary{
+  font-size: 20px;
+  line-height: 1.25;
+  /* font-style: italic; */
+  font-weight: 500;
+}
+.PlayButton{
+  font-size: 50px;
+  border-radius: 100%;
+  font-size: 50px;
+    border-radius: 100%;
+    border: none;
+    /* display: flex; */
+    align-items: baseline;
+    flex-direction: row;
+    align-content: stretch;
+    justify-content: space-evenly;
+    /* padding-left: 5px; */
+    padding: 8px;
+    padding-left: 14px;
+    font-size: 40px;
+    cursor: pointer;
+    /* color:#c21111; */
+}
+.PlayButton:hover{
+  /* background-color: #c21111; */
+  
+  
+  transform: scale(1.2);  
+}
+.PlayButton1{
+      /* font-size: 50px; */
+      border-radius: 100%;
+      border: none;
+      /* padding-left: 20px; */
+      /* padding-right: 18px; */
+      font-size: 38px;
+      padding-left: 10px;
+      padding-right: 10px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      padding-top: 7px;
+
+}
+.PlayButton1:hover{
+  color: red;
+  background-color: aliceblue;
+  transform: scale(1.2);
+}
+
