--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,15 @@ body{
     flex-wrap: nowrap;
     align-content: stretch;
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
     column-gap: 10px;
     padding: 10px;
     color: white;
     background-color: #000000;
-    
+    height: 400px;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),url("https://wallpaperaccess.com/full/1271617.jpg");
+    background-size:"cover";
+    background-position:"top center";
 
 }
 
@@ -93,6 +96,53 @@ background: #FFFFFF;
   grid-template-columns: 1fr 1fr 1fr 1fr ;
   gap: 30px;
   color: white;
+  padding-left: 4vw;
+  
+}
+@media only screen and (max-width: 1000px) {
+  .container {
+    background-color: #0F1014;
+  background-color: #000000;
+  min-width: fit-content;
+  /* padding-left: 50px;
+  padding-right: 50px; */
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr  ;
+  gap: 30px;
+  color: white;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .container {
+    background-color: #0F1014;
+  background-color: #000000;
+  min-width: fit-content;
+  /* padding-left: 50px;
+  padding-right: 50px; */
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: grid;
+  grid-template-columns: 1fr 1fr  ;
+  gap: 30px;
+  color: white;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .container {
+    background-color: #0F1014;
+  background-color: #000000;
+  min-width: fit-content;
+  /* padding-left: 50px;
+  padding-right: 50px; */
+  padding-top: 80px;
+  padding-bottom: 80px;
+  display: grid;
+  grid-template-columns: 1fr  ;
+  
+  color: white;
+  }
 }
 
 .container1 {
@@ -142,6 +192,9 @@ h5{
   height: 355px;
   max-width: 100%;
   border-radius: 5px;
+  /* box-shadow: 13px 8px 15px 15px rgb(104 4 4 / 20%), 0 6px 20px 0 rgb(70 7 7 / 19%); */
+  /* background: rgba(0, 0, 0, 0.5); */
+  opacity: 0.8;
 }
 .movie img:hover {
   transform: scale(1.1);  
