--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body{
   background-color: #000000;
+  
 }
 
 .App {
@@ -17,11 +18,10 @@ body{
     padding: 10px;
     color: white;
     background-color: #000000;
-    height: 400px;
+    height: 550px;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),url("https://wallpaperaccess.com/full/1271617.jpg");
     background-size:"cover";
     background-position:"top center";
-
 }
 
 .hover-efect :hover{color:red;}
@@ -90,7 +90,7 @@ background: #FFFFFF;
   min-width: fit-content;
   /* padding-left: 50px;
   padding-right: 50px; */
-  padding-top: 80px;
+  /* padding-top: 60px; */
   padding-bottom: 80px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr ;
@@ -194,7 +194,9 @@ h5{
   border-radius: 5px;
   /* box-shadow: 13px 8px 15px 15px rgb(104 4 4 / 20%), 0 6px 20px 0 rgb(70 7 7 / 19%); */
   /* background: rgba(0, 0, 0, 0.5); */
-  opacity: 0.8;
+  /* opacity: 0.8; */
+  border: 1.5px solid white;
+  border: 3px solid white;
 }
 .movie img:hover {
   transform: scale(1.1);  
@@ -272,6 +274,7 @@ h5{
 .buttonForNavigation{
   background-color: #000000;
   border:none;
+  background: transparent;
   
 }
 
@@ -283,4 +286,163 @@ h5{
 .colorwhite{
   color: black;
   background-color: rgb(133, 159, 159);
+}
+
+/* slider */
+
+.movie-app > .row {
+  overflow-x: auto;
+	flex-wrap: nowrap;
+  
+  
+}
+.row>* {
+  flex-shrink: 0;
+  width: fit-content;
+  max-width: fit-content;
+  
+}
+.immage2{
+  height: 355px;
+    border-radius: 2px;
+    border: 3px solid;
+    border: 3px solid white;
+    border-radius: 5px;
+}
+.immage2:hover{
+  transform: scale(1.1); 
+}
+.App2 {
+  display: flex;
+  background-color: #212121;
+  color: white;
+  min-height: 40px;
+  font-size: 15px;
+  flex-direction: row-reverse;
+  flex-wrap: nowrap;
+  align-content: stretch;
+  justify-content: space-around;
+  /* align-items: center; */
+  column-gap: 10px;
+  padding: 10px;
+  color: white;
+  background-color: #000000;
+  height: 300px;
+  /* background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),url("https://advancetitan.com/wp-content/uploads/2022/04/Stranger_Things__The_Experience.jpeg"); */
+  background-size:"cover";
+  background-position:"top center";
+  background: transparent;
+  height: 200px;
+
+}
+.nothing{
+  height: 700px;
+  
+}
+.App12{
+  overflow: hidden;
+  background-image: linear-gradient(to bottom , rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),url("https://advancetitan.com/wp-content/uploads/2022/04/Stranger_Things__The_Experience.jpeg");
+  
+}
+/* delete */
+.round-button {
+	box-sizing: border-box;
+	display:block;
+	width:80px;
+	height:80px;
+	padding-top: 14px;
+	padding-left: 8px;
+	line-height: 20px;
+	border: 6px solid #fff;
+	border-radius: 50%;
+	color:#f5f5f5;
+	text-align:center;
+	text-decoration:none;
+	background-color: rgba(0,0,0,0.5);
+	font-size:20px;
+	font-weight:bold;
+	transition: all 0.3s ease;
+  background-color: transparent;
+}
+.round-button:hover {
+	background-color: rgba(2, 2, 2, 0.8);
+	box-shadow: 0px 0px 10px rgb(244, 244, 242);
+	text-shadow: 0px 0px 10px rgb(244, 244, 234);
+}
+.AppB {
+  display: flex;
+  background-color: #212121;
+  color: white;
+  min-height: 40px;
+  font-size: 15px;
+  flex-direction: row-reverse;
+  flex-wrap: nowrap;
+  align-content: stretch;
+  justify-content: space-around;
+  /* align-items: center; */
+  column-gap: 10px;
+  padding: 10px;
+  color: white;
+  background-color: #000000;
+  height: 550px;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),url("https://images2.alphacoders.com/674/674137.jpg");
+  background-size:"cover";
+  background-position:"top center";
+}
+#tags{
+  width:80%;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto;
+}
+
+.tag{
+  color:white;
+  padding:10px 20px;
+  background-color: transparent;
+  border:1px solid rgb(93, 91, 91);;
+  border-radius: 50px;
+  margin:5px;
+  display:inline-block;
+  cursor: pointer;
+}
+.tag:hover{
+  color:black;
+  background-color: white;
+}
+.play {
+  background-color: white;
+  color: black;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 500;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.more {
+  
+  background-color: gray;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: 500;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.buttons {
+ display: flex;
+  
 }
